# clinicgraph-enrichment

./: .coverage  .gitignore  AGENT.md  CLAUDE.md  FUTURE.md  README.md  index.html  pyproject.toml  requirements.txt
app/: enricher.py  graph_loader.py  imo_client.py  main.py  models.py  ner.py
data/demo/: note_clean.json  note_gap.json  note_partial.json  symptomap-v2.pptx
data/kg/: edges.json  icd_map.json  nodes.json
scripts/: build_kg.py
tests/: conftest.py  test_api.py  test_enricher.py  test_graph.py  test_imo.py  test_models.py  test_ner.py
